[package]
name = "crypto-loan-monitor"
version = "0.0.1"
authors = ["AlanGuo <AlanGuo>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.1", features = ["full", "macros", "net", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tokio-serde = { version = "0.8", features = ["json"] }
futures = "0.3"
serde_json = "1.0"
hmac = "0.10"
sha2 = "0.9"
base64 = "0.13"
confy = "0.3"
chrono = "0.4"
url = "2.2"
hex="0.3"
log="0.4"
env_logger="0.8"

[[bin]]
name = "monitor"
path = "src/main.rs"
